# py-mcp2626

./: .env.example  .gitignore  README.md  package.json  turbo.json
.github/workflows/: ci.yml  deploy-ts-reference.yml
apps/py-mcp-server/: Dockerfile  README.md  pyproject.toml
apps/py-mcp-server/src/py_mcp_server/: __init__.py  server.py
apps/py-mcp-server/tests/: test_server.py
apps/ts-mcp-server/: README.md  package.json  tsconfig.json  wrangler.toml
apps/ts-mcp-server/src/: index.ts  server.ts
apps/ts-mcp-server/test/: server.test.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SETUP.md
docs/superpowers/specs/: 2026-03-26-mcp-starter-platform-design.md
scripts/: new-server.mjs  package-release.ps1  setup.ps1  upload-guide.ps1
templates/py-server/: pyproject.toml
templates/py-server/src/__PYTHON_MODULE__/: server.py
templates/ts-server/: package.json  tsconfig.json
templates/ts-server/src/: index.ts
