[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-mcp-server"
version = "0.1.0"
description = "Python reference MCP server for the py-type platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.10.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
